k8s_nginxIngress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demosvc-c
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "demosvc-c.<public-ip>.nip.io"
      http:
       paths:              
        - path: /(.*)
          backend:
            serviceName: demosvc-c
            servicePort: 80
          

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demosvc-b
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "demosvc-b.<public-ip>.nip.io"
      http:
       paths:              
        - path: /(.*)
          backend:
            serviceName: demosvc-b
            servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demosvc-a
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "demosvc-a.<public-ip>.nip.io"
      http:
       paths:              
        - path: /(.*)
          backend:
            serviceName: demosvc-a
            servicePort: 80
